be: api blood request
