# src/routes/index.js
@@ -13,4 +13,5 @@ router.use("/blood-donations", require("./bloodDonation"));
 router.use("/content-category", require("./contentCategory"));
 router.use("/content", require("./content"));
 router.use("/facility", require("./facility"));
+router.use("/blood-requests", require("./bloodRequest"));
 module.exports = router;
